# nonblocking_unix_socket_server

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
libnbuss/: BaseClient.cpp  BaseClient.h  CMakeLists.txt  Crc16.cpp  Crc16.h  FileDescriptor.h  FiniteStateMachine.h  IGenericServer.cpp  IGenericServer.h  IThreadable.cpp  IThreadable.h  Logger.cpp  Logger.h  SocketData.cpp  SocketData.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  ThreadDecorator.cpp  ThreadDecorator.h  ThreadedServer.cpp  ThreadedServer.h  ThreadedServer2.cpp  ThreadedServer2.h  UnixPipe.h  UnixSocketClient.cpp  UnixSocketClient.h  UnixSocketServer.cpp  UnixSocketServer.h  WorkQueue.cpp  WorkQueue.h  Worker.cpp  Worker.h  configuration.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/testlibnbuss/: CMakeLists.txt  main.cpp  tcpsocket_tests.cpp  test_1server_1client_unixsocket.cpp  test_common.cpp  test_threadedserver2.cpp  testlibnbuss.cpp  testlibnbuss.h  threadedserver2_test.cpp  unixsocket_tests.cpp  workqueue_test.cpp
unix_socket_client/: CMakeLists.txt  unixsocketclient.c
